# av1-scd

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  av1-scd.spec  main.py  pyproject.toml  requirement.txt  requirements.txt  ruff.toml
src/: cfg.py  keyframes.py  log.py  mediainfo.py  option.py  predefined.py
src/av1_scd/: __main__.py  cfg.py  keyframes.py  log.py  main.py  mediainfo.py  option.py  predefined.py  util.py  validate.py
src/av1_scd/scd/: avscenechange.py  ffmpeg.py  pyscene.py  transnetv2.py  vsxvid.py
src/scd/: avscenechange.py  pyscene.py  vsxvid.py
