[project]
name = "av1-scd"
version = "1.0.0"
description = "Tool to quickly detect scene change and generate config file for encoder to force keyframe for Encoding video."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "opencv-python>=4.12.0.88",
    "pymediainfo>=7.0.1",
    "scenedetect>=0.6.6",
    "termcolor>=3.1.0",
    "tqdm>=4.67.1",
    "vapoursynth>=71",
    "vstools>=3.4.4",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
