[project]
name = "av1-scd"
version = "1.0.0"
description = "Tool to quickly detect scene change and generate config file for encoder to force keyframe for Encoding video."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pymediainfo>=7.0.1",
    "scenedetect<0.7",
    "termcolor>=3.1.0",
    "tqdm>=4.67.1",
]
authors = [
    { name = "Khaoklong", email = "chatmongkol.klong@gmail.com" }
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.2.0",
    "ruff>=0.12.7",
]

[project.scripts]
av1-scd = "av1_scd.main:main"

[project.optional-dependencies]
pyscene = [
    "av>=15.0.0",
    "moviepy>=2.2.1",
]
transnet = [
    "onnxruntime>=1.22.1",
    "onnxruntime-gpu>=1.22.0",
]
vsxvid = [
    "vapoursynth>=71",
    "vstools>=3.4.4",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 90
